# kotlin-analyzer

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  rules.g4  test.ron
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/ast/: Cargo.toml  build.rs  cargo.toml
crates/ast/build_bak/: build.rs  generators.rs
crates/ast/src/: cast.rs  lib.rs  nodes.rs  syntax.rs
crates/ast/src/cast/: tests.rs
crates/ast/src/nodes/: file_annotation.rs  import_list.rs  mod.rs  newline.rs  package_header.rs  shebangline.rs  statement.rs  top_level_object.rs
crates/decompiler/: Cargo.toml
crates/decompiler/src/: java.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs
crates/lexer/tests/: lexer.rs
crates/lexer/tests/snapshots/: lexer__keyword_start.snap  lexer__multi_line_str_test.snap  lexer__nested_multi_str_test.snap  lexer__nested_str_test.snap  lexer__simple.snap
crates/lexer/tests/utils/: mod.rs
crates/lexis/: Cargo.toml
crates/lexis/src/: lib.rs  parser.rs  syntax.rs  tokens.rs
crates/lexis/src/parser/: flexible.rs  types.rs
crates/lexis/src/syntax/: tests.rs
crates/lexis/src/tokens/: tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  listener.rs  parser.rs  parts.rs  proto.rs  visitor.rs
crates/parser/src/parts/: annotations.rs  annotations_test.rs  class_members.rs  class_members_test.rs  classes.rs  classes_test.rs  enum_classes.rs  enum_classes_test.rs  expressions.rs  expressions_test.rs  general.rs  general_test.rs  identifiers.rs  identifiers_test.rs  modifiers.rs  modifiers_test.rs  statements.rs  statements_test.rs  types.rs  types_test.rs  utils.rs
crates/parser/src/parts/snapshots/: parser__parts__class_members_test__recovers_after_invalid_member_declaration-no_recovery.snap  parser__parts__class_members_test__recovers_after_invalid_member_declaration-valid_recovery.snap  parser__parts__classes_test__recovers_from_invalid_class_parameter.snap  parser__parts__statements_test__recovers_after_invalid_do_while_and_continues.snap  parser__parts__statements_test__recovers_if_there_is_no_semis_after_statement.snap  parser__parts__types_test__ty_parses_diverse_structures-complex_mix.snap  parser__parts__types_test__ty_parses_diverse_structures-function_no_receiver.snap  parser__parts__types_test__ty_parses_diverse_structures-function_with_receiver.snap  parser__parts__types_test__ty_parses_diverse_structures-nullable_chain.snap  parser__parts__types_test__ty_parses_diverse_structures-parenthesized_function.snap  parser__parts__types_test__ty_parses_diverse_structures-projection_variance.snap  parser__parts__types_test__ty_parses_diverse_structures-qualified_generic.snap  parser__parts__types_test__ty_parses_diverse_structures-simple.snap  parser__parts__types_test__ty_parses_diverse_structures-star_projection.snap
crates/parser/src/test_utils/: mod.rs
crates/parser/tests/: parse.rs
crates/parser/tests/common/: mod.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: cast.rs  lib.rs
crates/syntax/src/cast/: tests.rs
crates/tokenizer/: Cargo.toml  cargo.toml
crates/tokenizer/src/: keywords.rs  lexer.rs  lexers.rs  lib.rs  tokens.rs  tokens_temp.rs
crates/tokenizer/tests/: lexer.rs
editors/code/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
editors/code/syntaxes/: kotlin.tmLanguage.json
libs/classpath_resolver/: Cargo.toml  classpath.gradle
libs/classpath_resolver/src/: resolver.rs
libs/macros/: Cargo.toml  debug.ron  debug.rs
libs/macros/src/: combinators.rs  generate_ast.rs  lib.rs  map.rs  name.rs  parse.rs
libs/macros/src/test/: assertions.rs
libs/macros/tests/: basic.rs
libs/token_maps/: Cargo.toml
libs/token_maps/src/: lib.rs
libs/tokens/: Cargo.toml
libs/tokens/src/: lib.rs
pest/: kotlin_spec.pest
scripts/: main.ts
spec/: syntax_grammar.ini
