[workspace]
members = ["crates/*", "libs/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ikechukwu Eze"]
rust-version = "1.85"


[workspace.dependencies]
assert-panic = "1.0.1"
ast = { path = "./crates/ast" }
casey = "0.4.0"
classpath_resolver = { path = "./libs/classpath_resolver" }
derive_more = { version = "1.0.0", features = ["debug"] }
inflector-plus = "0.11.7"
itertools = "0.14.0"
lexer = { path = "./crates/lexer" }
macros = { path = "./libs/macros" }
nonempty = "0.11.0"
parser = { path = "./crates/parser" }
pretty_assertions = "1.4.1"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
rowan = "0.16.1"
rstest = "0.24.0"
syn = "2.0.90"
tokens = { path = "./libs/tokens" }
