[workspace]
resolver = "2"
members = ["crates/*", "libs/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
assert-panic = "1.0.1"
ast = { path = "./crates/ast" }
casey = "0.4.0"
classpath_resolver = { path = "./libs/classpath_resolver" }
derive_more = { version = "2.0.1", features = ["debug"] }
finl_unicode = "1.3.0"
inflector-plus = "0.11.7"
itertools = "0.14.0"
lady-deirdre = "2.1.0"
lexer = { path = "./crates/lexer" }
macros = { path = "./libs/macros" }
nonempty = "0.11.0"
parser = { path = "./crates/parser" }
pretty_assertions = "1.4.1"
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rowan = "0.16.1"
rstest = "0.25.0"
syn = "2.0.104"
tokens = { path = "./libs/tokens" }
