[workspace]
resolver = "2"
members = ["crates/*", "libs/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
assert-panic = "1.0.1"
ast = { path = "./crates/ast" }
casey = "0.4.0"
classpath_resolver = { path = "./libs/classpath_resolver" }
derive_more = { version = "2.1.1", features = ["debug"] }
inflector-plus = "0.11.7"
insta = { version = "1.37.0", features = ["ron"] }
itertools = "0.14.0"
lexer = { path = "./crates/lexer" }
macros = { path = "./libs/macros" }
nonempty = "0.12.0"
parser = { path = "./crates/parser" }
pretty_assertions = "1.4.1"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
ron = "0.12"
rowan = "0.16.1"
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
syn = "2.0.90"
tokens = { path = "./libs/tokens" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
