[package]
name = "ast"
version = "0.0.1"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
syntax.workspace = true
ron = "0.8"
serde = { version = "1", features = ["derive"] }
macros.workspace = true

[build-dependencies]
pest.workspace = true
pest_derive.workspace = true
tokens.workspace = true
inflector-plus.workspace = true
