[package]
name = "ast"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "TBD"
license.workspace = true

[dependencies]
casey.workspace = true
inflector-plus.workspace = true
macros.workspace = true
ron.workspace = true
rowan.workspace = true
serde.workspace = true
tokens.workspace = true
