[package]
name = "decompiler"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Java class decompiler"
license.workspace = true

[dependencies]
classpath_resolver.workspace = true
classy = { git = "https://github.com/kotlin-analyzer/classy", rev = "v0.0.1" }
jars = "0.1.1"
ron = "0.8"
