[package]
name = "lexer"
version = "0.0.1"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokens = { workspace = true }
unicode_categories = "0.1.1"

[dev-dependencies]
macros = { workspace = true }
rstest.workspace = true
pretty_assertions.workspace = true
