[package]
name = "lexer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "TBD"
license.workspace = true

[dependencies]
tokens = { workspace = true }
unicode_categories = "0.1.1"

[dev-dependencies]
macros = { workspace = true }
pretty_assertions.workspace = true
rstest.workspace = true
