[package]
name = "lexer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "TBD"
license.workspace = true

[dependencies]
tokens = { workspace = true }
unicode_categories = "0.1.1"

[dev-dependencies]
insta.workspace = true
macros = { workspace = true }
pretty_assertions.workspace = true
rstest.workspace = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
