[package]
name = "parser"
version = "0.0.1"
description = "TBD"
build = "build/main.rs"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
antlr-rust.workspace = true

[dev-dependencies]
itertools.workspace = true
ast.workspace = true
rowan.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
