[package]
name = "parser"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "TBD"
license.workspace = true

[dependencies]
# todo: remove dependency on lexer: move to dev dependencies
lexer.workspace = true
tokens = { workspace = true }

[dev-dependencies]
itertools.workspace = true
pretty_assertions.workspace = true
rowan.workspace = true
rstest.workspace = true
