[package]
name = "syntax"
version = "0.0.1"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokens = { workspace = true }
rowan = "0.15.15"
lexer.workspace = true
itertools.workspace = true

[dev-dependencies]
rstest = "0.19.0"
pretty_assertions.workspace = true
