[package]
name = "macros"
version = "0.0.1"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.77"
proc-macro2 = "1.0.86"
quote = "1.0.37"
tokens.workspace = true
inflector-plus.workspace = true
prettyplease = "0.2.22"
itertools.workspace = true

[dev-dependencies]
assert-panic.workspace = true
