[package]
name = "macros"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "TBD"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
derive_more.workspace = true
inflector-plus.workspace = true
itertools.workspace = true
nonempty.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tokens.workspace = true

[dev-dependencies]
assert-panic.workspace = true
